# chip8

./: .gitignore  CMakeLists.txt  LICENSE  Machine.cpp  Machine.hpp  README.md  ROM.cpp  ROM.hpp  main.cpp
src/: CMakeLists.txt  Display.cpp  Display.hpp  Executor.cpp  Executor.hpp  Machine.cpp  Machine.hpp  ROM.cpp  ROM.hpp  main.cpp
test/: CMakeLists.txt  Executor_tests.cpp  Machine_tests.cpp  ROM_tests.cpp
